--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ psycopg2-binary==2.9.8
 pydantic==2.4.2
 jinja2==3.1.2
 python-dotenv==1.0.0
+passlib==1.7.4
 bcrypt<4.0
 email-validator==2.1.1
 python-jose==3.3.0
