--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,36 @@
+alembic==1.16.1
+annotated-types==0.7.0
+anyio==3.7.1
+bcrypt==3.2.2
+certifi==2025.6.15
+cffi==1.17.1
+click==8.2.0
+cloudinary==1.44.1
+dnspython==2.7.0
+dotenv==0.9.9
+ecdsa==0.19.1
+email_validator==2.1.1
 fastapi==0.103.1
-uvicorn==0.24.0
-sqlalchemy==2.0.21
-psycopg2-binary==2.9.8
-pydantic==2.4.2
-jinja2==3.1.2
-python-dotenv==1.0.0
+h11==0.16.0
+idna==3.10
+Jinja2==3.1.2
+Mako==1.3.10
+MarkupSafe==3.0.2
 passlib==1.7.4
-bcrypt<4.0
-email-validator==2.1.1
+psycopg2-binary==2.9.8
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.4.2
+pydantic_core==2.10.1
+python-dotenv==1.0.0
 python-jose==3.3.0
-python-multipart
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.21
+starlette==0.27.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.5.0
+uvicorn==0.24.0
