--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,35 @@ anyio==3.7.1
 bcrypt==3.2.2
 certifi==2025.6.15
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.0
 cloudinary==1.44.1
 dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.1
 email_validator==2.1.1
+et_xmlfile==2.0.0
 fastapi==0.103.1
 h11==0.16.0
 idna==3.10
 Jinja2==3.1.2
 Mako==1.3.10
 MarkupSafe==3.0.2
+numpy==2.3.1
+openpyxl==3.1.5
+pandas==2.3.0
 passlib==1.7.4
 psycopg2-binary==2.9.8
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.4.2
 pydantic_core==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.20
+pytz==2025.2
+requests==2.32.4
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -32,5 +40,6 @@ SQLAlchemy==2.0.21
 starlette==0.27.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.24.0
